--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1,3 +1,7 @@
+body {
+  margin:0;
+}
+
 #root {
   min-height: 100vh;
   width: 100vw;
@@ -6,6 +10,8 @@
   align-items: center;
   background: lightgray;
   padding-bottom: 20px;
+  font-size: 18px;
+  font-family: 'courier new';
 }
 
 * {
